--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ langchain_core==0.3.48
 langchain_openai==0.3.10
 langgraph==0.3.20
 langsmith==0.3.18
+langchain==0.3.21
 pydantic==2.10.6
 pydantic_settings==2.8.1
 python-dotenv==1.0.1
