--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,27 +1,77 @@
-name: Docker build and scan security issue by sas-image-scanner
+name: Docker 镜像构建与部署
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 env:
-  REPO_TAG: 2269232413918/ai-wallet:1.0
+  # 阿里云容器镜像服务配置
+  REGISTRY: registry.cn-hangzhou.aliyuncs.com
+  REPO_PATH: sinrpc/ai-wallet
+  # 服务器配置
+  DOCKER_COMPOSE_FILE: docker-compose.yaml
+  SSH_HOST: 120.26.250.150
+  SSH_USER: root
 
 jobs:
-
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.REPO_TAG }}
-    - name: Scan image by sas-image-scanner
-      run: >
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host
-          sas-image-scanner-registry.cn-hangzhou.cr.aliyuncs.com/sas_public/sas-image-scanner:latest
-          --accessKeyId=${{ secrets.ACCESSKEYID }} --accessKeySecret=${{ secrets.ACCESSKEYSECRET }}
-          --token=${{ secrets.SAS_TOKEN }} --imageId=${{ env.REPO_TAG }}
+    # 第一步：拉取代码
+    - uses: actions/checkout@v4
+
+    # 第二步：生成时间戳作为镜像标签
+    - name: 生成时间戳标签
+      id: timestamp
+      run: echo "TAG=$(date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
+
+    # 第三步：登录阿里云容器镜像服务
+    - name: 登录阿里云镜像仓库
+      run: |
+        echo "${{ secrets.ACR_PASSWORD }}" | docker login \
+          --username=986244259@qq.com \
+          ${{ env.REGISTRY }} \
+          --password-stdin
+
+    # 第四步：构建Docker镜像（带时间戳和latest两个标签）
+    - name: 构建Docker镜像
+      run: |
+        docker build . \
+          --file Dockerfile \
+          --tag ${{ env.REGISTRY }}/${{ env.REPO_PATH }}:${{ steps.timestamp.outputs.TAG }} \
+          --tag ${{ env.REGISTRY }}/${{ env.REPO_PATH }}:latest
+
+    # 第五步：推送镜像到仓库
+    - name: 推送Docker镜像
+      run: |
+        docker push ${{ env.REGISTRY }}/${{ env.REPO_PATH }}:${{ steps.timestamp.outputs.TAG }}
+        docker push ${{ env.REGISTRY }}/${{ env.REPO_PATH }}:latest
+
+    # 第六步：SSH连接到服务器部署
+    - name: 部署到生产服务器
+      uses: appleboy/ssh-action@v1
+      with:
+        host: ${{ env.SSH_HOST }}
+        username: ${{ env.SSH_USER }}
+        password: ${{ secrets.SSH_PASSWORD }}
+        script: |
+          # 1. 登录阿里云镜像仓库
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login \
+            --username=986244259@qq.com \
+            ${{ env.REGISTRY }} \
+            --password-stdin
+          
+          # 2. 拉取新镜像
+          echo "正在拉取新镜像..."
+          docker pull ${{ env.REGISTRY }}/${{ env.REPO_PATH }}:${{ steps.timestamp.outputs.TAG }}
+          
+          # 3. 使用docker-compose重新部署服务
+          echo "正在重启服务..."
+          docker-compose -f ${{ env.DOCKER_COMPOSE_FILE }} down
+          docker-compose -f ${{ env.DOCKER_COMPOSE_FILE }} up -d
+          
+          # 4. 清理24小时前的旧镜像
+          echo "正在清理旧镜像..."
+          docker image prune -af --filter "until=24h"
+          echo "部署完成！"
