--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -89,5 +89,8 @@ jobs:
             docker-compose down         # 停止并移除旧容器
             docker-compose up -d       # 启动新版本
             docker image prune -f      # 清理旧镜像，避免占用过多磁盘空间
-
+            #删除其他镜像
+            # 保留特定镜像并删除其他镜像
+            docker images --format "{{.Repository}}:{{.Tag}} {{.ID}}" | grep -v "registry.cn-hangzhou.aliyuncs.com/sinrpc/ai-wallet:latest" | awk '{print $2}' | xargs docker rmi
+            
             echo "✅ 部署完成"
