--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,13 +2,14 @@ fastapi==0.115.12
 graphviz==0.20.3
 ipython==8.12.3
 langchain==0.3.21
-langchain_core==0.3.48
-langchain_openai==0.3.10
+langchain_core==0.3.49
+langchain_openai==0.3.11
 langgraph==0.3.20
-langsmith==0.3.18
+langsmith==0.3.19
+openai==1.68.2
 pydantic==2.10.6
 pydantic_settings==2.8.1
-python-dotenv==1.0.1
+PyJWT==2.10.1
+python-dotenv==1.1.0
 redis==5.2.1
 uvicorn==0.34.0
-pyjwt==2.10.1
