--- a/.env.exmplae
+++ b/.env.exmplae
@@ -1,5 +1,5 @@
-OPENAI_API_KEY=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
-OPENAI_API_BASE_URL=https://api.openai.com/v1
+OPENAI_API_KEY=sk-I5XLWtJAWOXAEQjJOuSb6FXQsWNuInkuNxin4jVwVM4rPCmy
+OPENAI_API_BASE_URL=https://www.dmxapi.cn/v1
 MYSQL_HOST=192.168.1.1
 MYSQL_USER=root
 MYSQL_PASSWORD=123456
