--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ MYSQL_DATABASE=chatbot
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
-LANGSMITH_TRACING=true
+LANGSMITH_TRACING=false
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY="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"
 LANGSMITH_PROJECT="pr-fixed-popsicle-93"
