--- a/docker-compose-ai.yaml
+++ b/docker-compose-ai.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   python-app:
-    image: registry.cn-hangzhou.aliyuncs.com/sinrpc/ai-wallet:latest  # 使用推送到阿里云的镜像
+    image: registry.cn-hangzhou.aliyuncs.com/sinrpc/ai-wallet:latest  # 使用阿里云镜像
     working_dir: /tikeAgent
     volumes:
       - .env:/tikeAgent/.env
@@ -17,7 +17,3 @@ services:
 networks:
   tike-agent-net:
     driver: bridge
-
-volumes:
-  redis_data:
-    external: true  # 如果您有外部卷的话，确保它可以被清除
