--- a/.env.exmplae
+++ b/.env.exmplae
@@ -1,5 +1,5 @@
 OPENAI_API_KEY=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
-OPENAI_API_BASE_URL=https://api.openai.com/v1
+OPENAI_API_BASE_URL=https://api.openai.cn/v1
 MYSQL_HOST=192.168.1.1
 MYSQL_USER=root
 MYSQL_PASSWORD=123456
