--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -29,3 +29,11 @@ pybreaker==1.3.0
 ratelimit==2.2.1
 langchain-tavily==0.1.5
 mypy==1.15.0
+h2==4.2.0
+hpack==4.1.0
+hyperframe==6.1.0
+langchain-qdrant==0.2.0
+numpy==2.2.5
+portalocker==2.10.1
+qdrant-client==1.14.2
+beautifulsoup4
