--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -8,6 +8,7 @@ services:
     working_dir: /tikeAgent
     volumes:
       - .env:/tikeAgent/.env
+      - /tmp/langchain_qdrant:/tmp/langchain_qdrant
     ports:
       - "8000:8000"
     environment:
